--- a/scss/style.scss
+++ b/scss/style.scss
@@ -457,7 +457,6 @@ main{
             }
         }
 }
-
 footer{
     margin-top: 250px;
     width: 80%;
@@ -588,6 +587,9 @@ footer{
         }
 
     }
+}
+.modal-category{
+    display: none;
 }
 @media only screen and (min-width: 375px) and (max-width: 768px) , (max-width: 375px){
 .wrapper{
@@ -949,3 +951,378 @@ footer{
 }
 
 }
+@media only screen and (min-width: 768px) and (max-width: 900px){
+    header{
+        width: 95%;
+        height: 55px;
+        .header-content{
+        nav{
+            display: flex;
+        }
+        .toggle{
+            display: none;
+            }
+        }
+    }
+    main{
+        margin: 0 auto;
+        margin-top: 20px;
+        width: 80%;
+        height: 1050px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .main-content{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: space-between ;
+            align-items: space-between;
+            flex-direction: column;
+            .main-musics{
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                .musics{
+                    width: 100%;
+                    height: 1000px;
+                    .popular-musics{
+                        width: 100%;
+                        height: 100%;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-between;
+                    }
+                    .similar-musics{
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-between;
+                        height: 1050px;
+                    }
+                    .music{
+                        width: 90%;
+                        padding: 10px 10px 10px 10px;
+                        background-color: rgba(150, 80, 233, 0.1);
+                        border-radius: 10px;
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        margin-bottom: 10px;
+                        .play-btn{
+                            width: 40px;
+                            height: 40px;
+                            margin-left: 10px;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            cursor: pointer;
+                        }
+                        .about-music{
+                            width: 127px;
+                            height: 40px;
+                            position: absolute;
+                            margin-left: 80px;
+                            display: flex;
+                            flex-direction: column;
+                            cursor: pointer;
+                            .music-title{
+                                font-family: 'Inter';
+                                font-style: normal;
+                                font-weight: 400;
+                                font-size: 16px;
+                                line-height: 19px;
+                                color: #323232;
+                            }
+                            .music-subtitle{
+                                font-family: 'Inter';
+                                font-style: normal;
+                                font-weight: 700;
+                                font-size: 16px;
+                                line-height: 19px;
+                                color: #323232;
+                            }
+                        }
+                        .download-btn{
+                            width: 25px;
+                            height: 32px;
+                            margin-right: 10px;
+                        }
+                    }
+                    .main-player{
+                        width: 592px;
+                        height:max-content ;
+                        margin-bottom: 20px;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-between;
+                        .music-header{
+                            width: 100%;
+                            height: 100px;
+                            display: flex;
+                            justify-content: space-between;
+                            margin-bottom: 10px;
+                            .services{
+                                margin-left: 0px;
+                                width: 129px;
+                                height: 103px;
+                                display: flex;
+                                flex-direction: column;
+                                justify-content: space-between;
+                                div{
+                                    font-family: 'Raleway';
+                                    font-style: normal;
+                                    font-weight: 400;
+                                    font-size: 16px;
+                                    line-height: 19px;
+                                    color: #AFAFAF;
+                                }
+                            } 
+                            .services__info{
+                                margin-right: 200px;
+                                width: 129px;
+                                height: 103px;
+                                display: flex;
+                                flex-direction: column;
+                                justify-content: space-between;
+                                div{
+                                    font-family: 'Raleway';
+                                    font-style: normal;
+                                    font-weight: 400;
+                                    font-size: 16px;
+                                    line-height: 19px;
+                                    color: #323232;
+                                }
+                            }
+                        
+                        }
+                        .music-buttons{
+                            width: 100%;
+                            height: 44px;
+                            display: flex;
+                            justify-content: space-between;
+                            align-items: center;
+                            a{
+                                color: white;
+                                text-decoration: none;
+                            }
+                            div{
+                                display: flex;
+                                justify-content: space-between;
+                                align-items: center;
+                                width: 170px;
+                                height: 44px;
+                                background-color: #9650E9;
+                                border-radius: 10px;
+                                padding: 5px;
+                                p{
+                                    font-family: 'Raleway';
+                                    font-style: normal;
+                                    font-weight: 400;
+                                    font-size: 16px;
+                                    line-height: 19px;
+                                    color: #FFFFFF;
+                                }
+                            }
+                            .download{
+                                margin-right: 230px;
+                            }
+                        }
+                        .music-text{
+                            margin-top: 10px;
+                            width: 100%;
+                            height:max-content;
+                            p{
+                                font-family: 'Raleway';
+                                font-style: normal;
+                                font-weight: 300;
+                                font-size: 14px;
+                                line-height: 16px;
+                                color: #323232;
+                            }
+                        }
+    
+                    }
+                    h1{
+                        font-family: 'Raleway';
+                        font-style: normal;
+                        font-weight: 700;
+                        font-size: 25px;
+                        line-height: 42px;  
+                        color: #323232;
+                        margin-bottom:20px;
+                    }
+                    h2{
+                        font-family: 'Inter';
+                        font-style: normal;
+                        font-weight: 400;
+                        font-size: 16px;
+                        line-height: 19px;
+                        color: #000000;
+                        margin-bottom: 20px;
+                    }
+                    h3{
+                        font-family: 'Raleway';
+                        font-style: normal;
+                        font-weight: 700;
+                        font-size: 16px;
+                        line-height: 42px;
+                        color: #323232;
+                        margin-bottom: 70px;
+                    }
+                }
+                .sections{
+                    width: 330px;
+                    height: 1040px;
+                    flex-direction: column;
+                    justify-content: space-between;
+                    .category{
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-between;
+                        align-items: center;
+                        width: 330px;
+                        height: 500px;
+                        background-color: rgba(150, 80, 233, 0.05);
+                        border-radius: 15px;
+                        h2{
+                            font-family: 'Raleway';
+                            font-style: normal;
+                            font-weight: 700;
+                            font-size: 26px;
+                            line-height: 42px;
+                            color: #323232;
+                            margin-top: 10px;
+                        }
+                            ul{
+                                height: 361px;
+                                display: flex;
+                                justify-content: space-between;
+                                flex-direction: column;
+                                margin-bottom: 60px;
+                                margin-right: 120px;
+                                li{
+                                    font-family: 'Raleway';
+                                    font-style: normal;
+                                    font-weight: 400;
+                                    font-size: 16px;
+                                    line-height: 19px;
+                                    color: #323232;
+                                    list-style-image:url(../icons/square.svg);  
+                                    cursor: pointer;                          
+                                }
+                            
+                            }
+                    }
+                    .new-musics{
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-between;
+                        align-items: center;    
+                        margin-top: 10px;
+                        width: 330px;
+                        height: 500px;
+                        background-color: rgba(150, 80, 233, 0.05);
+                        border-radius: 15px;
+                        h2{
+                            font-family: 'Raleway';
+                            font-style: normal;
+                            font-weight: 700;
+                            font-size: 26px;
+                            line-height: 42px;
+                            color: #323232;
+                            margin-top: 10px;
+                        }
+                        .music{ 
+                            margin-left: 15px;
+                            margin-bottom: 10px;  
+                            width: 250px;
+                            height: 45px;  
+                            border-radius: 10px;
+                            display: flex;
+                            justify-content: space-between;
+                            align-items: center;
+                            .play-btn{
+                                width: 40px;
+                                height: 40px;
+                                margin-left: 10px;
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+                                cursor: pointer;
+                            }
+                            .about-music{
+                                width: 127px;
+                                height: 40px;
+                                position: absolute;
+                                margin-left: 80px;
+                                display: flex;
+                                flex-direction: column;
+                                cursor: pointer;
+                                .music-title{
+                                    font-family: 'Inter';
+                                    font-style: normal;
+                                    font-weight: 400;
+                                    font-size: 16px;
+                                    line-height: 19px;
+                                    color: #323232;
+                                }
+                                .music-subtitle{
+                                    font-family: 'Inter';
+                                    font-style: normal;
+                                    font-weight: 700;
+                                    font-size: 16px;
+                                    line-height: 19px;
+                                    color: #323232;
+                                }
+                                }
+                            }
+                        }
+                    }
+                    
+                }
+            }
+            .tabheader{
+                width: 100%;
+                height: 40px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                display: none;
+                .tabheader-items{
+                    width: 25%;
+                    display: flex;
+                    justify-content: space-between;
+                    .tabheader__item{
+                        border-radius: 2px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;    
+                        width: 24px;
+                        height: 24px;
+                        background-color: #9650E9;
+                        font-family: 'Raleway';
+                        font-style: normal;
+                        font-weight: 400;
+                        font-size: 16px;
+                        line-height: 19px;
+                        color: #FFFFFF;
+                        
+                    }
+                    .none{
+                        background-color: rgba(150, 80, 233, 0.1);;
+                        width: 40px;
+                        height: 24px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        color: black;
+    
+                    }
+                }
+            }
+    }
+ .modal-category{
+    display: none;
+ }   
+    }
+
