--- a/scss/style.scss
+++ b/scss/style.scss
@@ -108,13 +108,13 @@ header{
     }
     .search-icon{
         position: absolute;
-        top: 10px;
-        right: 10px;
+        top: 12px;
+        right: 25px;
         cursor: pointer;
     }
 
 
-    }
+}
 main{
     margin: 0 auto;
     margin-top: 20px;
@@ -170,7 +170,7 @@ main{
                         cursor: pointer;
                     }
                     .about-music{
-                        width: 127px;
+                        width: max-content;
                         height: 40px;
                         position: absolute;
                         margin-left: 80px;
@@ -288,6 +288,7 @@ main{
                         margin-top: 10px;
                         width: 100%;
                         height:max-content;
+                        overflow: scroll;
                         p{
                             font-family: 'Raleway';
                             font-style: normal;
@@ -634,10 +635,8 @@ footer{
 @media only screen and (min-width: 375px) and (max-width: 768px) , (max-width: 375px){
 .wrapper{
     height: max-content;
-    padding-bottom: 100px;
     overflow-x: hidden;
 }
-
 header{
     width: 95%;
     height: 55px;
@@ -661,6 +660,9 @@ header{
     }
 }
 }
+.search{
+    width: 60%;
+} 
 main{
     width: 80%;
     height: 1050px;
@@ -735,7 +737,6 @@ main{
                     .about-music{
                         width: 127px;
                         height: 40px;
-                        position: absolute;
                         margin-left: 80px;
                         display: flex;
                         flex-direction: column;
@@ -905,7 +906,7 @@ main{
                 }
                 
             }
-            .tabheader{
+        .tabheader{
                 margin-top: 150px;
                 width: 100%;
                 height: 40px;
@@ -921,7 +922,7 @@ main{
                         display: flex;
                         justify-content: center;
                         align-items: center;    
-                        width: 24px;
+                        width: 12px;
                         height: 24px;
                         background: rgba(230, 218, 244, 0.82);
                         font-family: 'Raleway';
@@ -953,6 +954,7 @@ main{
 }
 footer{
     .footer-content{
+        margin-top: 40px;
         height: 250px ;
         display: flex;
         justify-content: space-between;
@@ -1022,12 +1024,33 @@ footer{
         cursor: pointer;
     }
 }
-.search{
-    width: 60%;
-} 
 .player{
-    display: none;
-}  
+    width: 100%;
+    position: fixed;
+    height: 120px;
+    padding-bottom: 20px;
+    border-radius: 0;
+    .music-info{
+        div:last-child{
+            margin-bottom: 40px;
+        }
+    }
+    .player-buttons{
+padding-bottom: 20px;padding-top: 20px;        
+        .repeat{
+            order:2;
+            margin-left: 120px;  
+        }
+        .center{
+            order: 0    ;
+        }
+        .download{
+            order: 3;
+        }
+    }
+    .player-length{
+        display: none;
+    }
 }
 @media only screen and (min-width: 768px) and (max-width: 1200px){
     header{
@@ -1286,7 +1309,10 @@ footer{
     display: none;
  } 
  .player{
-    display: none;
+    .player-buttons{
+        margin-top: 20px;
+    }
  }  
     }
 
+}
