--- a/css/style.css
+++ b/css/style.css
@@ -1488,10 +1488,9 @@ footer .footer-content .ad {
   .player-mobile {
     position: fixed;
     bottom: 0;
-    width: 90%;
-    height: 140px;
+    width: 100%;
+    height: 100px;
     background-color: #A47ECF;
-    border-radius: 20px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1513,7 +1512,7 @@ footer .footer-content .ad {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    width: 80%;
+    width: 90%;
   }
   .player-mobile .music-btns .music-info {
     margin-top: 10px;
@@ -1522,7 +1521,7 @@ footer .footer-content .ad {
     font-family: "Inter";
     font-style: normal;
     font-weight: 700;
-    font-size: 16px;
+    font-size: 12px;
     line-height: 15px;
     color: #FFFFFF;
   }
@@ -1530,7 +1529,7 @@ footer .footer-content .ad {
     font-family: "Inter";
     font-style: normal;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 12px;
     line-height: 15px;
     color: #FFFFFF;
     margin-left: 10px;
@@ -1540,6 +1539,11 @@ footer .footer-content .ad {
   }
   .player-mobile .music-btns .music-button .repeat {
     margin-right: 15px;
+    width: 16px;
+    height: 14px;
+  }
+  .player-mobile .music-btns .music-button .download {
+    margin-top: 5px;
   }
   .player-mobile .music-btns div {
     display: -webkit-box;
@@ -1561,10 +1565,12 @@ footer .footer-content .ad {
             align-items: center;
   }
   .player-mobile .play-buttons div {
-    margin-left: 5px;
+    width: 30px;
+    height: 30px;
+    margin-left: 20px;
   }
   .player-mobile .player-length {
-    width: 80%;
+    width: 70%;
     height: 30px;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1582,13 +1588,13 @@ footer .footer-content .ad {
     font-family: "Raleway";
     font-style: normal;
     font-weight: 500;
-    font-size: 22px;
-    line-height: 26px;
+    font-size: 16px;
+    line-height: 14px;
     color: #FFFFFF;
     cursor: pointer;
   }
   .player-mobile .player-length .play-length {
-    width: 600px;
+    width: 60%;
     height: 5px;
     background-color: white;
     border-radius: 6px;
