--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1034,10 +1034,9 @@ footer{
 .player-mobile{
     position: fixed;
     bottom: 0;
-    width: 90%;
-    height: 140px;
+    width: 100%;
+    height: 100px;
     background-color: #A47ECF;
-    border-radius: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -1045,14 +1044,14 @@ footer{
     .music-btns{
         display: flex;
         justify-content: space-between;
-        width: 80%;
+        width: 90%;
         .music-info{
             margin-top: 10px;
             .music-name{
                 font-family: 'Inter';
                 font-style: normal;
                 font-weight: 700;
-                font-size: 16px;
+                font-size: 12px;
                 line-height: 15px;
                 color: #FFFFFF;
             }
@@ -1060,7 +1059,7 @@ footer{
                 font-family: 'Inter';
                 font-style: normal;
                 font-weight: 400;
-                font-size: 14px;
+                font-size: 12px;
                 line-height: 15px;
                 color: #FFFFFF;
                 margin-left: 10px;
@@ -1070,6 +1069,11 @@ footer{
             margin-top: 5px;
             .repeat{
                 margin-right: 15px;
+                width: 16px;
+                height: 14px;
+            }
+            .download{
+                margin-top: 5px;
             }
         }
         div{
@@ -1081,12 +1085,15 @@ footer{
         display: flex;
         justify-content: space-between;
         align-items: center;
+        
         div{
-            margin-left: 5px;
+            width: 30px;
+            height: 30px;
+            margin-left:20px;
         }
     }
     .player-length{
-        width: 80%;
+        width: 70%;
         height: 30px;
         display: flex;
         align-items: center;
@@ -1097,13 +1104,13 @@ footer{
             font-family: 'Raleway';
             font-style: normal;
             font-weight: 500;
-            font-size: 22px;
-            line-height: 26px;
+            font-size: 16px;
+            line-height: 14px;
             color: #FFFFFF;
             cursor: pointer;
         }
         .play-length{
-            width: 600px;
+            width: 60%;
             height: 5px;
             background-color: white;
             border-radius: 6px;
